gitlab-webhook/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-deployment
  namespace: gitlab-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
        team: cloud
    spec:
      containers:
      - name: webhook-container
        image: imagepath.domain.doc/registry:tagv.0.0.1
