gitlab-webhook/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: gitlab-webhook
spec:
  selector:
    app: webhook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
