gitlab-webhook/manifests/vs-hook.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    external-dns.dif.tech/private: "true"
  labels:
    app: gitlab-mr-hook-listener
    dif.tech/argocd: gitlab-mr-hook-listener-dt-mng-euc1-infra
    env: dev
    release: gitlab-hook-listener
    team: cloud
  name: gitlab-mr-hook-listener-private
  namespace: gitlab-webhook
spec:
  gateways:
  - istio-system/istio-ingressgateway-private
  hosts:
  - gitlab-mr-hook-listener-dev.beta.diftech.org
  http:
  - route:
    - destination:
        host: mr-webhook-service
        port:
          number: 13100
